--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <script src="./assets/js/game.js"></script>
     <script src="./assets/js/openForBattle.js"></script>
     <script src="./assets/js/main.js"></script>
+    
     <style>
+      body {
+        
+      }
       canvas {
         display: block;
         margin: auto;
